Initial EOD project upload
